minor changes and fixes

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta content="%PUBLIC_URL%/twitter-card.png" property="twitter:image" />
     <meta property="og:type" content="website" />
     <meta content="summary" name="twitter:card" />
-    <meta name="twitter:site" content="@ui8" />
-    <meta name="twitter:creator" content="@ui8" />
+
     <meta property="fb:admins" content="132951670226590" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -35,8 +34,9 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Poppins:wght@400;500;600;700&display=swap"
-    rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
